WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308583
pdf/pdf-plugin-printing.html is flakily crashing, ASSERTION FAILED: m_plugInStreamLoaders.contains(&loader)
https://bugs.webkit.org/show_bug.cgi?id=308583
Summary
pdf/pdf-plugin-printing.html is flakily crashing, ASSERTION FAILED: m_plugInS...
Abrar Rahman Protyasha
Reported
2026-02-24 14:25:43 PST
The test fails with this stderr output: ``` ASSERTION FAILED: m_plugInStreamLoaders.contains(&loader) /Source/WebCore/loader/DocumentLoader.cpp(2063) : void WebCore::DocumentLoader::removePlugInStreamLoader(ResourceLoader &) 1 0x3066714fc WebCore::DocumentLoader::removePlugInStreamLoader(WebCore::ResourceLoader&) 2 0x306792e2c WebCore::NetscapePlugInStreamLoader::notifyDone() 3 0x306792f7c WebCore::NetscapePlugInStreamLoader::didCancel(WebCore::LoadWillContinueInAnotherProcess) 4 0x3067c0a88 WebCore::ResourceLoader::cancel(WebCore::ResourceError const&, WebCore::LoadWillContinueInAnotherProcess) 5 0x11f827ae8 WebKit::PluginView::Stream::cancel() 6 0x11f8289e4 WebKit::PluginView::~PluginView() 7 0x11f828bb4 WebKit::PluginView::~PluginView() 8 0x11f828be0 WebKit::PluginView::~PluginView() 9 0x3025fb0d8 WTF::RefCounted<WebCore::Widget>::deref() const 10 0x302602824 WTF::DefaultRefDerefTraits<WebCore::Widget>::derefIfNotNull(WebCore::Widget*) 11 0x306ab0ef8 WTF::Ref<WebCore::Widget, WTF::RawPtrTraits<WebCore::Widget>, WTF::DefaultRefDerefTraits<WebCore::Widget>>::~Ref() 12 0x306a5ed3c WTF::Ref<WebCore::Widget, WTF::RawPtrTraits<WebCore::Widget>, WTF::DefaultRefDerefTraits<WebCore::Widget>>::~Ref() 13 0x307c137c4 WTF::KeyValuePair<WTF::Ref<WebCore::Widget, WTF::RawPtrTraits<WebCore::Widget>, WTF::DefaultRefDerefTraits<WebCore::Widget>>, WTF::WeakPtr<WebCore::LocalFrameView, WTF::SingleThreadWeakPtrImpl, WTF::RawPtrTraits<WTF::SingleThreadWeakPtrImpl>>>::~KeyValuePair() 14 0x307c13778 WTF::KeyValuePair<WTF::Ref<WebCore::Widget, WTF::RawPtrTraits<WebCore::Widget>, WTF::DefaultRefDerefTraits<WebCore::Widget>>, WTF::WeakPtr<WebCore::LocalFrameView, WTF::SingleThreadWeakPtrImpl, WTF::RawPtrTraits<WTF::SingleThreadWeakPtrImpl>>>::~KeyValuePair() 15 0x307c13704 WTF::HashTable<WTF::Ref<WebCore::Widget, WTF::RawPtrTraits<WebCore::Widget>, WTF::DefaultRefDerefTraits<WebCore::Widget>>, WTF::KeyValuePair<WTF::Ref<WebCore::Widget, WTF::RawPtrTraits<WebCore::Widget>, WTF::DefaultRefDerefTraits<WebCore::Widget>>, WTF::WeakPtr<WebCore::LocalFrameView, WTF::SingleThreadWeakPtrImpl, WTF::RawPtrTraits<WTF::SingleThreadWeakPtrImpl>>>, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<WTF::Ref<WebCore::Widget, WTF::RawPtrTraits<WebCore::Widget>, WTF::DefaultRefDerefTraits<WebCore::Widget>>, WTF::WeakPtr<WebCore::LocalFrameView, WTF::SingleThreadWeakPtrImpl, WTF::RawPtrTraits<WTF::SingleThreadWeakPtrImpl>>>>, WTF::DefaultHash<WTF::Ref<WebCore::Widget, WTF::RawPtrTraits<WebCore::Widget>, WTF::DefaultRefDerefTraits<WebCore::Widget>>>, WTF::HashMap<WTF::Ref<WebCore::Widget, WTF::RawPtrTraits<WebCore::Widget>, WTF::DefaultRefDerefTraits<WebCore::Widget>>, WTF::WeakPtr<WebCore::LocalFrameView, WTF::SingleThreadWeakPtrImpl, WTF::RawPtrTraits<WTF::SingleThreadWeakPtrImpl>>, WTF::DefaultHash<WTF::Ref<WebCore::Widget, WTF::RawPtrTraits<WebCore::Widget>, WTF::DefaultRefDerefTraits<WebCore::Widget>>>, WTF::HashTraits<WTF::Ref<WebCore::Widget, WTF::RawPtrTraits<WebCore::Widget>, WTF::DefaultRefDerefTraits<WebCore::Widget>>>, WTF::HashTraits<WTF::WeakPtr<WebCore::LocalFrameView, WTF::SingleThreadWeakPtrImpl, WTF::RawPtrTraits<WTF::SingleThreadWeakPtrImpl>>>, WTF::HashTableTraits, (WTF::ShouldValidateKey)1, WTF::FastMalloc>::KeyValuePairTraits, WTF::HashTraits<WTF::Ref<WebCore::Widget, WTF::RawPtrTraits<WebCore::Widget>, WTF::DefaultRefDerefTraits<WebCore::Widget>>>, WTF::FastMalloc>::deallocateTable(WTF::KeyValuePair<WTF::Ref<WebCore::Widget, WTF::RawPtrTraits<WebCore::Widget>, WTF::DefaultRefDerefTraits<WebCore::Widget>>, WTF::WeakPtr<WebCore::LocalFrameView, WTF::SingleThreadWeakPtrImpl, WTF::RawPtrTraits<WTF::SingleThreadWeakPtrImpl>>>*) 16 0x307c13670 WTF::HashTable<WTF::Ref<WebCore::Widget, WTF::RawPtrTraits<WebCore::Widget>, WTF::DefaultRefDerefTraits<WebCore::Widget>>, WTF::KeyValuePair<WTF::Ref<WebCore::Widget, WTF::RawPtrTraits<WebCore::Widget>, WTF::DefaultRefDerefTraits<WebCore::Widget>>, WTF::WeakPtr<WebCore::LocalFrameView, WTF::SingleThreadWeakPtrImpl, WTF::RawPtrTraits<WTF::SingleThreadWeakPtrImpl>>>, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<WTF::Ref<WebCore::Widget, WTF::RawPtrTraits<WebCore::Widget>, WTF::DefaultRefDerefTraits<WebCore::Widget>>, WTF::WeakPtr<WebCore::LocalFrameView, WTF::SingleThreadWeakPtrImpl, WTF::RawPtrTraits<WTF::SingleThreadWeakPtrImpl>>>>, WTF::DefaultHash<WTF::Ref<WebCore::Widget, WTF::RawPtrTraits<WebCore::Widget>, WTF::DefaultRefDerefTraits<WebCore::Widget>>>, WTF::HashMap<WTF::Ref<WebCore::Widget, WTF::RawPtrTraits<WebCore::Widget>, WTF::DefaultRefDerefTraits<WebCore::Widget>>, WTF::WeakPtr<WebCore::LocalFrameView, WTF::SingleThreadWeakPtrImpl, WTF::RawPtrTraits<WTF::SingleThreadWeakPtrImpl>>, WTF::DefaultHash<WTF::Ref<WebCore::Widget, WTF::RawPtrTraits<WebCore::Widget>, WTF::DefaultRefDerefTraits<WebCore::Widget>>>, WTF::HashTraits<WTF::Ref<WebCore::Widget, WTF::RawPtrTraits<WebCore::Widget>, WTF::DefaultRefDerefTraits<WebCore::Widget>>>, WTF::HashTraits<WTF::WeakPtr<WebCore::LocalFrameView, WTF::SingleThreadWeakPtrImpl, WTF::RawPtrTraits<WTF::SingleThreadWeakPtrImpl>>>, WTF::HashTableTraits, (WTF::ShouldValidateKey)1, WTF::FastMalloc>::KeyValuePairTraits, WTF::HashTraits<WTF::Ref<WebCore::Widget, WTF::RawPtrTraits<WebCore::Widget>, WTF::DefaultRefDerefTraits<WebCore::Widget>>>, WTF::FastMalloc>::~HashTable() 17 0x307c135e4 WTF::HashTable<WTF::Ref<WebCore::Widget, WTF::RawPtrTraits<WebCore::Widget>, WTF::DefaultRefDerefTraits<WebCore::Widget>>, WTF::KeyValuePair<WTF::Ref<WebCore::Widget, WTF::RawPtrTraits<WebCore::Widget>, WTF::DefaultRefDerefTraits<WebCore::Widget>>, WTF::WeakPtr<WebCore::LocalFrameView, WTF::SingleThreadWeakPtrImpl, WTF::RawPtrTraits<WTF::SingleThreadWeakPtrImpl>>>, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<WTF::Ref<WebCore::Widget, WTF::RawPtrTraits<WebCore::Widget>, WTF::DefaultRefDerefTraits<WebCore::Widget>>, WTF::WeakPtr<WebCore::LocalFrameView, WTF::SingleThreadWeakPtrImpl, WTF::RawPtrTraits<WTF::SingleThreadWeakPtrImpl>>>>, WTF::DefaultHash<WTF::Ref<WebCore::Widget, WTF::RawPtrTraits<WebCore::Widget>, WTF::DefaultRefDerefTraits<WebCore::Widget>>>, WTF::HashMap<WTF::Ref<WebCore::Widget, WTF::RawPtrTraits<WebCore::Widget>, WTF::DefaultRefDerefTraits<WebCore::Widget>>, WTF::WeakPtr<WebCore::LocalFrameView, WTF::SingleThreadWeakPtrImpl, WTF::RawPtrTraits<WTF::SingleThreadWeakPtrImpl>>, WTF::DefaultHash<WTF::Ref<WebCore::Widget, WTF::RawPtrTraits<WebCore::Widget>, WTF::DefaultRefDerefTraits<WebCore::Widget>>>, WTF::HashTraits<WTF::Ref<WebCore::Widget, WTF::RawPtrTraits<WebCore::Widget>, WTF::DefaultRefDerefTraits<WebCore::Widget>>>, WTF::HashTraits<WTF::WeakPtr<WebCore::LocalFrameView, WTF::SingleThreadWeakPtrImpl, WTF::RawPtrTraits<WTF::SingleThreadWeakPtrImpl>>>, WTF::HashTableTraits, (WTF::ShouldValidateKey)1, WTF::FastMalloc>::KeyValuePairTraits, WTF::HashTraits<WTF::Ref<WebCore::Widget, WTF::RawPtrTraits<WebCore::Widget>, WTF::DefaultRefDerefTraits<WebCore::Widget>>>, WTF::FastMalloc>::~HashTable() 18 0x307c13880 WTF::HashMap<WTF::Ref<WebCore::Widget, WTF::RawPtrTraits<WebCore::Widget>, WTF::DefaultRefDerefTraits<WebCore::Widget>>, WTF::WeakPtr<WebCore::LocalFrameView, WTF::SingleThreadWeakPtrImpl, WTF::RawPtrTraits<WTF::SingleThreadWeakPtrImpl>>, WTF::DefaultHash<WTF::Ref<WebCore::Widget, WTF::RawPtrTraits<WebCore::Widget>, WTF::DefaultRefDerefTraits<WebCore::Widget>>>, WTF::HashTraits<WTF::Ref<WebCore::Widget, WTF::RawPtrTraits<WebCore::Widget>, WTF::DefaultRefDerefTraits<WebCore::Widget>>>, WTF::HashTraits<WTF::WeakPtr<WebCore::LocalFrameView, WTF::SingleThreadWeakPtrImpl, WTF::RawPtrTraits<WTF::SingleThreadWeakPtrImpl>>>, WTF::HashTableTraits, (WTF::ShouldValidateKey)1, WTF::FastMalloc>::~HashMap() 19 0x307c0a728 WTF::HashMap<WTF::Ref<WebCore::Widget, WTF::RawPtrTraits<WebCore::Widget>, WTF::DefaultRefDerefTraits<WebCore::Widget>>, WTF::WeakPtr<WebCore::LocalFrameView, WTF::SingleThreadWeakPtrImpl, WTF::RawPtrTraits<WTF::SingleThreadWeakPtrImpl>>, WTF::DefaultHash<WTF::Ref<WebCore::Widget, WTF::RawPtrTraits<WebCore::Widget>, WTF::DefaultRefDerefTraits<WebCore::Widget>>>, WTF::HashTraits<WTF::Ref<WebCore::Widget, WTF::RawPtrTraits<WebCore::Widget>, WTF::DefaultRefDerefTraits<WebCore::Widget>>>, WTF::HashTraits<WTF::WeakPtr<WebCore::LocalFrameView, WTF::SingleThreadWeakPtrImpl, WTF::RawPtrTraits<WTF::SingleThreadWeakPtrImpl>>>, WTF::HashTableTraits, (WTF::ShouldValidateKey)1, WTF::FastMalloc>::~HashMap() 20 0x307c0a618 WebCore::WidgetHierarchyUpdatesSuspensionScope::moveWidgets() 21 0x3025f6b40 WebCore::WidgetHierarchyUpdatesSuspensionScope::~WidgetHierarchyUpdatesSuspensionScope() 22 0x3025e4178 WebCore::WidgetHierarchyUpdatesSuspensionScope::~WidgetHierarchyUpdatesSuspensionScope() 23 0x3056930d8 WebCore::Document::resolveStyle(WebCore::Document::ResolveStyleType) 24 0x305693b54 WebCore::Document::updateStyleIfNeeded() 25 0x306a68948 WebCore::LocalFrameViewLayoutContext::updateStyleForLayout() 26 0x306a67d98 WebCore::LocalFrameViewLayoutContext::performLayout(bool) 27 0x306a3b814 WebCore::LocalFrameViewLayoutContext::layout(bool) 28 0x306a38064 WebCore::LocalFrameView::forceLayout(bool) 29 0x306a37b80 WebCore::LocalFrameView::forceLayoutForPagination(WebCore::FloatSize const&, WebCore::FloatSize const&, float, WebCore::AdjustViewSize) 30 0x306a377a4 WebCore::LocalFrame::setPrinting(bool, WebCore::FloatSize, WebCore::FloatSize, float, WebCore::AdjustViewSize, WebCore::Frame::NotifyUIProcess) 31 0x306bfbbac WebCore::PrintContext::begin(float, float) com.apple.WebKit.WebContent.Development terminated (pid 28543) for reason: crash ```
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-02-24 14:25:49 PST
<
rdar://problem/171111801
>
Abrar Rahman Protyasha
Comment 2
2026-02-24 16:52:42 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59377
EWS
Comment 3
2026-02-25 16:24:57 PST
Committed
308242@main
(8f4821e1ffd5): <
https://commits.webkit.org/308242@main
> Reviewed commits have been landed. Closing PR #59377 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug